v0.4.0/_sources/api/generated/boule.Ellipsoid.rst.txt
boule.Ellipsoid
===============

.. currentmodule:: boule

.. autoclass:: Ellipsoid



Attributes
----------



.. autoattribute:: Ellipsoid.eccentricity



.. autoattribute:: Ellipsoid.first_eccentricity



.. autoattribute:: Ellipsoid.gravity_equator



.. autoattribute:: Ellipsoid.gravity_pole



.. autoattribute:: Ellipsoid.linear_eccentricity



.. autoattribute:: Ellipsoid.mean_radius



.. autoattribute:: Ellipsoid.second_eccentricity



.. autoattribute:: Ellipsoid.semiminor_axis



.. autoattribute:: Ellipsoid.thirdflattening



.. autoattribute:: Ellipsoid.volume





Methods
-------

.. rubric:: List of methods

.. autosummary::
    
    
    
    
        Ellipsoid.geocentric_radius
    
    
    
        Ellipsoid.geodetic_to_spherical
    
    
    
        Ellipsoid.normal_gravity
    
    
    
        Ellipsoid.prime_vertical_radius
    
    
    
        Ellipsoid.spherical_to_geodetic
    
    

.. rubric:: Methods documentation





.. automethod:: Ellipsoid.geocentric_radius

----




.. automethod:: Ellipsoid.geodetic_to_spherical

----




.. automethod:: Ellipsoid.normal_gravity

----




.. automethod:: Ellipsoid.prime_vertical_radius

----




.. automethod:: Ellipsoid.spherical_to_geodetic

----




.. raw:: html

     <div style='clear:both'></div>
